refactor: make WebDriver fields final and improve title checks in page classes